--- a/Assignment3/Assignment3/Base.lproj/Main.storyboard
+++ b/Assignment3/Assignment3/Base.lproj/Main.storyboard
@@ -88,6 +88,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="382" y="335"/>
         </scene>
     </scenes>
 </document>
